@@ -66,7 +66,3 @@
     </div>
 {% endblock %}
 
-{% block JSfile %}
-    <!-- JS files -->
-    <script src="{% static 'dashboard/js/filemanager.js' %}"></script>
-{% endblock %}
