@@ -69,7 +69,7 @@
                             href="#best-selling-courses">پر فروش
                             ترین ها</a>
                         <div class="dropdown-divider"></div>
-                        <a data-scroll="#search-course" class="dropdown-item nav-scroll" href="#search-course">جستوجو
+                        <a data-scroll="#search-course" class="dropdown-item nav-scroll" href="#search-course">جستجو
                             دوره</a>
                     </div>
                 </li>
