@@ -91,3 +91,7 @@ pip install -U drf-yasg
 --> very important
 i send test email for tetha
 please remove it after new version
+
+--> for clearCache
+pip install django-clearcache
+
